--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,4 @@ jobs:
       - name: "Install"
         run: npm install
       - name: "Deploy"
-        run: npm run deploy
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+        run: CLOUDFLARE_API_TOKEN=${{ vars.CF_API_TOKEN }} npm run deploy
