--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
       - name: "Install"
         run: npm install
       - name: "Deploy"
-        run: CLOUDFLARE_API_TOKEN=${{ vars.CF_API_TOKEN }} npm run deploy
+        run: CLOUDFLARE_API_TOKEN=${{ env.CF_API_TOKEN }} npm run deploy
