--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,5 +15,5 @@ jobs:
         run: npm install
       - name: "Deploy"
         env:
-          CLOUDFLARE_API_TOKEN: ${{ env.CF_API_TOKEN }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
         run: npx wrangler publish
